--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,13 +6,14 @@
   --primary-color-hue: 252;
   --dark-color-lightness: 17%;
   --light-color-lightness: 95%;
+  --white-color-lightness: 100%;
   /* Position Sticky Rules */
   --sticky-top-left: 5.4rem;
   --sticky-top-right: -18rem;
   --color-primary: hsl(var(--primary-color-hue), 75%, 60%);
   --color-light: hsl(252, 30%, var(--light-color-lightness));
   --color-dark: hsl(252, 30%, var(--dark-color-lightness));
-  --color-white: hsl(252, 30%, 100%);
+  --color-white: hsl(252, 30%, var(--white-color-lightness));
 }
 
 /* Palette Colori */
@@ -65,6 +66,11 @@ img {
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
   font-size: 0.9rem;
+}
+
+/* Regola generale per il Pointer su richiesta */
+.pointer {
+  cursor: pointer;
 }
 
 .btn:hover {
