Implementato sezioni su box messages e aggiunto classi dinamiche.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,7 @@ img {
   font-size: 0.9rem;
 }
 
+/* Regola generale per il Pointer su richiesta */
 .pointer {
   cursor: pointer;
 }
@@ -989,6 +990,7 @@ img {
   font-size: 0.9rem;
 }
 
+/* Regola generale per il Pointer su richiesta */
 .pointer {
   cursor: pointer;
 }
