--- a/assets/scss/_partials/_main.scss
+++ b/assets/scss/_partials/_main.scss
@@ -202,7 +202,7 @@ main .container .left .sidebar {
         padding: $card-padding;
         border-radius: $card-border-radius;
         flex-direction: column;
-        color: var(--color-white);
+        color: $color-white;
         font-size: 0.75rem;
         width: 100%;
         background: $color-danger;
@@ -411,28 +411,38 @@ main .container .left .sidebar {
 
 .right .friend-requests {
     margin-top: 1rem;
+    flex-direction: column;
     h4 {
         color: $color-gray;
         margin: 1rem 0;
     }
 }
 
-.right .request {
+.friend-requests .request {
     background: var(--color-white);
     padding: $card-padding;
     border-radius: $card-border-radius;
     margin-bottom: 0.7rem;
+    padding: 0.45rem;
     .info,
     .action {
         display: flex;
-        gap: 1rem;
+        gap: 0.5rem;
     }
+    .action .btn {
+        padding: 0.65rem;
+    }
+
     .info {
         margin-bottom: 1rem;
+        p {
+            font-size: 0.85rem;
+        }
     }
     .info .profile-picture img {
-        width: 100%;
-        height: 100%;
+        width: 40px;
+        height: 40px;
+        background-size: cover;
     }
 }
 
