--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -23,6 +23,7 @@ $font-600: 600;
 }
 
 /* Palette Colori */
+$color-white: hsl(252, 30%, 100%);
 $color-gray: hsl(252, 15%, 65%);
 $color-secondary: hsl(252, 100%, 90%);
 $color-success: hsl(120, 95%, 65%);
