Esercizio completato e portato a termine

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -431,6 +431,11 @@ main .container .left .sidebar {
           align-items: start;
   gap: 1rem;
   margin-bottom: 1rem;
+  width: 100%;
+}
+
+.left .notifications-popup > div:hover {
+  background-color: var(--color-light);
 }
 
 .left .notifications-popup small {
@@ -1363,6 +1368,11 @@ main .container .left .sidebar {
           align-items: start;
   gap: 1rem;
   margin-bottom: 1rem;
+  width: 100%;
+}
+
+.left .notifications-popup > div:hover {
+  background-color: var(--color-light);
 }
 
 .left .notifications-popup small {
