--- a/assets/scss/_partials/_main.scss
+++ b/assets/scss/_partials/_main.scss
@@ -213,6 +213,7 @@ main .container .left .sidebar {
         background: $color-danger;
         position: relative;
         overflow: hidden;
+        cursor: pointer;
     }
     .story::before {
         content: "";
